# OpenAndroidFrameworkToolkits

./: build.gradle  settings.gradle
TestApplication/: build.gradle
TestApplication/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
libBaseUitls/: build.gradle
libBaseUitls/src/main/java/com/zhuchao/android/fbase/: TAppUtils.java  TCourierEventBus.java  TTaskThreadPool.java
libCamera/: build.gradle
libDNetUtils/: build.gradle
libDNetUtils/src/main/: AndroidManifest.xml
libDNetUtils/src/main/java/com/zhuchao/android/net/: TNetUtils.java
libDecodeCore/: build.gradle
libFOSUtils/: build.gradle
libFPersistUtils/: build.gradle
libFPersistUtils/src/main/java/com/zhuchao/android/persist/: DBHelper.java
libGXMediaUtils/: build.gradle
libGXPlayerUtils/: build.gradle
libGXPlayerUtils/src/main/java/com/zhuchao/android/player/: MPlayer.java  OPlayer.java  PlayControl.java
libIPCOTMS/: CMakeLists.txt  build.gradle
libIPCOTMS/src/main/cpp/ipc-socket-otsm-service/: CMakeLists.txt
libIPCOTMS/src/main/cpp/ipc-socket-otsm-service/APP/: CMakeLists.txt
libIPCOTMS/src/main/cpp/ipc-socket-otsm-service/HAL/: octopus_serialport.hpp
libIPCOTMS/src/main/cpp/ipc-socket-otsm-service/OTSM/: octopus_flash.h
libOpenC-CNN/: build.gradle
libOpenComputerVision/: build.gradle
libOpenComputerVision/java/src/org/opencv/android/: JavaCamera2View.java
libOpenDetection/: build.gradle
libOpenIPC-OTMS/: build.gradle
libOpenIPC-OTMS/src/main/cpp/ipc-socket-otsm-service/: main.cpp
libOpenIPC-OTMS/src/main/cpp/ipc-socket-otsm-service/APP/: octopus_ipc_app_client.cpp  octopus_ipc_app_client.hpp  octopus_ipc_app_client_jni.cpp
libOpenIPC-OTMS/src/main/cpp/ipc-socket-otsm-service/HAL/: CMakeLists.txt  octopus_serialport.cpp  octopus_serialport_c.cpp  octopus_serialport_c.h
libOpenIPC-OTMS/src/main/cpp/ipc-socket-otsm-service/IPC/: CMakeLists.txt  octopus_ipc_ptl.cpp  octopus_ipc_ptl.hpp  octopus_ipc_threadpool.cpp  octopus_ipc_threadpool.hpp  octopus_logger.cpp
libOpenIPC-OTMS/src/main/cpp/ipc-socket-otsm-service/OTSM/: CMakeLists.txt
libOpenIPC-OTMS/src/main/java/com/zhuchao/octopus/ipc_otms/: IPCClient.java
libOpenLargeModelDeepLearning/: build.gradle
libSessionUtils/: build.gradle
libSessionUtils/src/main/java/com/zhuchao/android/session/: Cabinet.java  GlobalBroadcastReceiver.java  TMediaMetadataManager.java
libSessionUtils/src/main/java/com/zhuchao/android/session/base/: MApplication.java
libSessionUtils/src/main/java/com/zhuchao/android/utils/: RadarBeepGenerator.java  RadarBeepManager.java
